[gd_scene load_steps=3 format=2]

[ext_resource path="res://MultiplayerGameTest.gd" type="Script" id=1]
[ext_resource path="res://addons/godotlib/MultiplayerGame.gd" type="Script" id=2]

[node name="MultiplayerGameTest" type="Node2D"]
script = ExtResource( 1 )

[node name="MultiplayerGame" type="Node" parent="."]
script = ExtResource( 2 )

[node name="HostAddresses" type="TextEdit" parent="."]
margin_left = 160.0
margin_top = 8.0
margin_right = 448.0
margin_bottom = 78.0
readonly = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label5" type="Label" parent="."]
margin_left = 64.0
margin_top = 16.0
margin_right = 94.0
margin_bottom = 30.0
text = "Host"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 64.0
margin_top = 96.0
margin_right = 116.0
margin_bottom = 110.0
text = "Join Address"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Address" type="LineEdit" parent="."]
margin_left = 160.0
margin_top = 92.0
margin_right = 302.0
margin_bottom = 116.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="."]
margin_left = 64.0
margin_top = 140.0
margin_right = 104.0
margin_bottom = 154.0
text = "Network Port"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Port" type="LineEdit" parent="."]
margin_left = 160.0
margin_top = 136.0
margin_right = 218.0
margin_bottom = 160.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="."]
margin_left = 64.0
margin_top = 188.0
margin_right = 138.0
margin_bottom = 202.0
text = "Max Joiners"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MaxClients" type="LineEdit" parent="."]
margin_left = 160.0
margin_top = 184.0
margin_right = 218.0
margin_bottom = 208.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HostButton" type="Button" parent="."]
margin_left = 160.0
margin_top = 232.0
margin_right = 202.0
margin_bottom = 252.0
text = "Host"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="JoinButton" type="Button" parent="."]
margin_left = 224.0
margin_top = 232.0
margin_right = 259.0
margin_bottom = 252.0
text = "Join"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeaveButton" type="Button" parent="."]
margin_left = 280.0
margin_top = 232.0
margin_right = 329.0
margin_bottom = 252.0
text = "Leave"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label4" type="Label" parent="."]
margin_left = 64.0
margin_top = 292.0
margin_right = 117.0
margin_bottom = 306.0
text = "Start Timeout"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timeout" type="LineEdit" parent="."]
margin_left = 160.0
margin_top = 288.0
margin_right = 218.0
margin_bottom = 312.0
text = "10"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="Button" parent="."]
margin_left = 160.0
margin_top = 332.0
margin_right = 201.0
margin_bottom = 352.0
disabled = true
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StopButton" type="Button" parent="."]
margin_left = 224.0
margin_top = 332.0
margin_right = 264.0
margin_bottom = 352.0
disabled = true
text = "Stop"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="game_event" from="MultiplayerGame" to="." method="_on_MultiplayerGame_game_event"]
[connection signal="host_event" from="MultiplayerGame" to="." method="_on_MultiplayerGame_host_event"]
[connection signal="join_event" from="MultiplayerGame" to="." method="_on_MultiplayerGame_join_event"]
[connection signal="peer_event" from="MultiplayerGame" to="." method="_on_MultiplayerGame_peer_event"]
[connection signal="pressed" from="HostButton" to="." method="_on_HostButton_pressed"]
[connection signal="pressed" from="JoinButton" to="." method="_on_JoinButton_pressed"]
[connection signal="pressed" from="LeaveButton" to="." method="_on_LeaveButton_pressed"]
[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="StopButton" to="." method="_on_StopButton_pressed"]
